// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInputDemo Component JSON 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: visible;
  padding-right: 1rem;
}

.c1 {
  display: inline-block;
  display: block;
}

.c8 {
  display: inline-block;
  width: 100%;
  height: 100%;
  display: block;
}

.c10 {
  font-size: 1.2rem;
  height: 3.2rem;
  color: #f22735;
  margin-top: 0.4rem;
  margin-bottom: 0rem;
  margin-left: 1rem;
  margin-right: 0rem;
  visibility: hidden;
}

.c12 {
  min-width: 3rem;
  position: absolute;
  right: 1rem;
  top: 10%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  color: #f22735;
  visibility: hidden;
  background-color: #ffffff;
  box-shadow: -1.4rem 0 0.6rem 0 #ffffff;
}

.c9 {
  font-size: 0;
  width: 100%;
}

.c11 {
  font-size: 0;
  position: relative;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
  background-color: #ffffff;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c4::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c4::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c4:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c4::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c6 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
  background-color: #ffffff;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c6::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c6::-moz-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c6:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c6::placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: #ffffff;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9EA4AE;
  padding-left: 1rem;
  color: #363B40;
}

.c0 {
  margin-left: 50px;
}

<div>
  <div
    className="c0"
  >
    <p>
      formatter AmountInput
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <p>
      default AmountInput
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <p>
      禁用状态 
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "backgroundColor": "#f2f2f2",
            "borderBottomColor": "#e8e8e8",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#e8e8e8",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#e8e8e8",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#e8e8e8",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "color": "#cccccc",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "color": "#cccccc",
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={true}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder=""
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": true,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "backgroundColor": "#f2f2f2",
              "color": "#cccccc",
              "cursor": "not-allowed",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={true}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#cccccc",
              "cursor": "not-allowed",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      small size
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "2.4rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.2rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c6"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "small",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="small"
          style={
            Object {
              "color": "#363B40",
              "fontSize": "1.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1rem",
            }
          }
        />
      </div>
    </div>
    <p>
      default size
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <p>
      large size
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "backgroundColor": "#f2f2f2",
            "borderBottomColor": "#e8e8e8",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#e8e8e8",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#e8e8e8",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#e8e8e8",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "color": "#cccccc",
            "height": "4rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "color": "#cccccc",
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={true}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder=""
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "large",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": true,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="large"
          style={
            Object {
              "backgroundColor": "#f2f2f2",
              "color": "#cccccc",
              "cursor": "not-allowed",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={true}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#cccccc",
              "cursor": "not-allowed",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      受限Input
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <p>
      有默认值的 受限Input
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value="123,456"
        />
        <i
          className="lugia-icon-reminder_close   c7"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      amountPrefix: '¥' transform: false 
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <p>
      amountPrefix: '$' transform: false 
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            $
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              $
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      校验信息显示类型 top 输入值 是否含有5
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c8"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <div
          className="c2"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
              "width": "100%",
            }
          }
        >
          <span
            className="c3"
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c4"
            disabled={false}
            maxLength="16"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {
                      "size": "default",
                    },
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#363B40",
                "fontSize": "1.4rem",
                "paddingBottom": "0rem",
                "paddingLeft": "0.6rem",
                "paddingRight": "1rem",
                "paddingTop": "0rem",
              }
            }
            type="text"
            value=""
          />
          <i
            className="lugia-icon-reminder_close   c5"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "fontSize": "1.2rem",
              }
            }
          />
        </div>
      </div>
    </div>
    <p>
      校验信息显示类型 bottom 输入值 是否含有5
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c9"
        style={Object {}}
      >
        <div
          className="c2"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
              "width": "100%",
            }
          }
        >
          <span
            className="c3"
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c4"
            disabled={false}
            maxLength="16"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {
                      "size": "default",
                    },
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#363B40",
                "fontSize": "1.4rem",
                "paddingBottom": "0rem",
                "paddingLeft": "0.6rem",
                "paddingRight": "1rem",
                "paddingTop": "0rem",
              }
            }
            type="text"
            value=""
          />
          <i
            className="lugia-icon-reminder_close   c5"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "fontSize": "1.2rem",
              }
            }
          />
        </div>
        <div
          className="c10"
          style={Object {}}
        >
          验证出错
        </div>
      </div>
    </div>
    <p>
      校验信息显示类型 inner 输入值 是否含有5
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c11"
        style={Object {}}
      >
        <div
          className="c2"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "3.2rem",
              "width": "100%",
            }
          }
        >
          <span
            className="c3"
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c4"
            disabled={false}
            maxLength="16"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {
                      "size": "default",
                    },
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "color": "#363B40",
                "fontSize": "1.4rem",
                "paddingBottom": "0rem",
                "paddingLeft": "0.6rem",
                "paddingRight": "1rem",
                "paddingTop": "0rem",
              }
            }
            type="text"
            value=""
          />
          <i
            className="lugia-icon-reminder_close   c5"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "fontSize": "1.2rem",
              }
            }
          />
        </div>
        <span
          className="c12"
          style={Object {}}
        >
          验证出错
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AmountInputDemo props: placeholder  1`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c0 {
  display: inline-block;
  display: block;
}

.c3 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
  background-color: #ffffff;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c3::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c3:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c3::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: #ffffff;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9EA4AE;
  padding-left: 1rem;
  color: #363B40;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "3.2rem",
      }
    }
  >
    <span
      className="c2"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <span
        className=""
        style={Object {}}
      >
        ¥
      </span>
    </span>
    <input
      autoFocus={false}
      className="c3"
      disabled={false}
      maxLength="16"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      placeholder="请填写内容"
      prefix={
        <ForwardRef(ResultForward)
          themeProps={
            Object {
              "onLugia": [Function],
              "propsConfig": Object {
                "size": "default",
              },
              "themeConfig": Object {
                "__partName": "AmountInputPrefix",
              },
              "themeState": Object {
                "disabled": false,
              },
            }
          }
        >
          ¥
        </ForwardRef(ResultForward)>
      }
      readOnly={false}
      size="default"
      style={
        Object {
          "color": "#363B40",
          "fontSize": "1.4rem",
          "paddingBottom": "0rem",
          "paddingLeft": "0.6rem",
          "paddingRight": "1rem",
          "paddingTop": "0rem",
        }
      }
      type="text"
      value=""
    />
    <i
      className="lugia-icon-reminder_close   c4"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#9EA4AE",
          "fontSize": "1.2rem",
        }
      }
    />
  </div>
</div>
`;

exports[`AmountInputDemo props: placeholder  2`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1rem;
}

.c0 {
  display: inline-block;
  display: block;
}

.c3 {
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
  background-color: #ffffff;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c3::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c3:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c3::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: #ffffff;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #9EA4AE;
  padding-left: 1rem;
  color: #363B40;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "3.2rem",
      }
    }
  >
    <span
      className="c2"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <span
        className=""
        style={Object {}}
      >
        ¥
      </span>
    </span>
    <input
      autoFocus={false}
      className="c3"
      disabled={false}
      maxLength="16"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      placeholder=""
      prefix={
        <ForwardRef(ResultForward)
          themeProps={
            Object {
              "onLugia": [Function],
              "propsConfig": Object {
                "size": "default",
              },
              "themeConfig": Object {
                "__partName": "AmountInputPrefix",
              },
              "themeState": Object {
                "disabled": false,
              },
            }
          }
        >
          ¥
        </ForwardRef(ResultForward)>
      }
      readOnly={false}
      size="default"
      style={
        Object {
          "color": "#363B40",
          "fontSize": "1.4rem",
          "paddingBottom": "0rem",
          "paddingLeft": "0.6rem",
          "paddingRight": "1rem",
          "paddingTop": "0rem",
        }
      }
      type="text"
      value=""
    />
    <i
      className="lugia-icon-reminder_close   c4"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "color": "#9EA4AE",
          "fontSize": "1.2rem",
        }
      }
    />
  </div>
</div>
`;
